framec_tests/language_specific/python/v3_facade_smoke/negative/strict_multi_errors.frm
@target python

system S {
    machine:
        $A {
            e() {
                -> $B(1)
                x =              # bad assignment
                def f(: pass      # malformed def
                if :
                    pass         # malformed if
            }
        }
        $B {
        }
}

